--- a/css/styles.css
+++ b/css/styles.css
@@ -198,14 +198,13 @@ p {
   fill: currentColor;
 }
 
-.icon:hover,
-.icon:focus {
-  fill: var(--accent-color);
-} 
 
 /* studio main */
 
 .studio {
+  width: 1600px;
+  height: 600px;
+  margin: auto;
   padding: 200px 0;
   background-color: #2f303a;
   text-align: center;
@@ -362,29 +361,40 @@ p {
 
 }
 
-.icon {
-  width: max-content;
-  height: max-content;
-  fill: var(--title-color);
-}
-.icon:hover,
-.icon:focus{
-  fill: var(--accent-color);
-  color: var(--title-color);
-}
-
 .link-hero-icon {
   width: 44px;
   height: 44px;
 }
 
 .link-icon{
+  display: block;
   width: 100%;
   height: 100%;
-  display: block;
-  background-color: var(--title-color);
-  color: var(--color-svg);
 
+  background-color: var(--title-color);
+  color: var(--accent-color);
+
+}
+
+.icon {
+  width: 100%;
+  height: 100%;
+
+
+  fill: var(--title-color);
+  color: var(--color-svg);
+}
+
+.link-icon:focus
+.link-icon:hover {
+  color: var(--color-svg);
+  background-color: var(--accent-color);
+}
+
+.icon:hover,
+.icon:focus {
+  fill: var(--accent-color);
+  color: var(--title-color);
 }
 
 /* portfolio */
@@ -468,6 +478,7 @@ gap: 30px;
   justify-content: center;
   align-items: center;
 
+  padding: 16px 32px;
   width: 100%;
   height: 100%;
   border: 1px solid var(--color-svg);
@@ -479,6 +490,8 @@ gap: 30px;
 .link-icon-clients:hover,
 .link-icon-clients:focus {
   border-color: var(--accent-color);
+  background-color: var(--title-color);
+  color: var(--accent-color);
 }
 
 .icon-clients {
@@ -563,12 +576,21 @@ gap: 30px;
   gap: 10px;
 }
 
+.li-footer-icon {
+width: 44px;
+height: 44px;
+}
+
 .link-footer-icon {
   display: block;
+  width: 100%;
+  height: 100%;
 
   color: var(--title-color);
 }
 .icon-footer{
+  width: 100%;
+  height: 100%;
   fill: rgba(255, 255, 255, 0.1);
 }
 
@@ -580,5 +602,6 @@ gap: 30px;
 .title-icon {
   display: block;
   margin-bottom: 20px;
+
   color: var(--title-color);
 }
