--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --secondary-accent-color: #188ce8;
   --section-bc-hero: #f5f4fa;
   --border-card-color: solid#EEEEEE;
-  --color-svg: #AFB1B8;
+  --color-svg: #afb1b8;
 }
 
 body {
@@ -65,7 +65,8 @@ body {
 .button:focus {
   background-color: var(--accent-color);
   color: var(--title-color);
-  box-shadow: 0px 3px 3px rgb(0 0 0 / 25%), 0px 3px 3px  rgb(0 0 0 / 25%), 0px 1px 2px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 3px rgb(0 0 0 / 25%), 0px 3px 3px rgb(0 0 0 / 25%),
+    0px 1px 2px rgb(0 0 0 / 12%);
 }
 
 .container {
@@ -174,7 +175,6 @@ p {
   align-items: center;
 }
 
-
 .header-link-cont {
   display: block;
   display: flex;
@@ -190,14 +190,12 @@ p {
 .icon-mail {
   margin-right: 10px;
   fill: currentColor;
-  
 }
 
 .icon-tel {
   margin-right: 10px;
   fill: currentColor;
 }
-
 
 /* studio main */
 
@@ -208,7 +206,12 @@ p {
   padding: 200px 0;
   background-color: #2f303a;
   text-align: center;
-  background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(../images/Imgbc.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/Imgbc.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -298,6 +301,31 @@ p {
   display: block;
 }
 
+.work-img {
+  position: relative;
+}
+
+.box-title-img {
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.title-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  font-size: 14px;
+  line-height: 1, 1;
+  letter-spacing: 3%;
+  color: var(--title-color);
+}
+
 /* section hero */
 
 .section-hero {
@@ -358,7 +386,6 @@ p {
   align-items: center;
   justify-content: center;
   gap: 10px;
-
 }
 
 .link-hero-icon {
@@ -366,36 +393,27 @@ p {
   height: 44px;
 }
 
-.link-icon{
+.link-icon {
   display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
   height: 100%;
 
   background-color: var(--title-color);
-  color: var(--accent-color);
-
-}
-
-.icon {
-  width: 100%;
-  height: 100%;
-
-
-  fill: var(--title-color);
   color: var(--color-svg);
+  border-radius: 24px;
 }
 
-.link-icon:focus
+
+.link-icon:focus, 
 .link-icon:hover {
-  color: var(--color-svg);
+  color: var(--title-color);
   background-color: var(--accent-color);
 }
 
-.icon:hover,
-.icon:focus {
-  fill: var(--accent-color);
-  color: var(--title-color);
-}
 
 /* portfolio */
 
@@ -423,7 +441,8 @@ p {
 
 .card-link:hover,
 .card-link:focus {
-  box-shadow: 0px 3px 3px rgb(0 0 0 / 25%), 0px 3px 3px  rgb(0 0 0 / 25%), 0px 1px 2px rgb(0 0 0 / 12%)
+  box-shadow: 1px 4px 6px rgb(0 0 0 / 16%), 0px 4px 4px rgb(0 0 0 / 6%),
+    0px 1px 1px rgb(0 0 0 / 12%);
 }
 
 .card {
@@ -456,18 +475,17 @@ p {
 /* section-clients */
 
 .section-clients {
-padding: 94px 0;
+  padding: 94px 0;
 }
 
 .list-clients {
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 30px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
-.li-clients{
+.li-clients {
   width: 170px;
   height: 92px;
 }
@@ -478,7 +496,6 @@ gap: 30px;
   justify-content: center;
   align-items: center;
 
-  padding: 16px 32px;
   width: 100%;
   height: 100%;
   border: 1px solid var(--color-svg);
@@ -503,8 +520,6 @@ gap: 30px;
   fill: var(--accent-color);
 }
 
-
-
 /* footer */
 
 .footer-link:hover,
@@ -515,7 +530,10 @@ gap: 30px;
 .footer-flex {
   display: flex;
   align-items: baseline;
-  gap: 70px;
+}
+
+.footer-box-icon {
+  margin-left: 70px;
 }
 
 .footer {
@@ -523,7 +541,6 @@ gap: 30px;
 
   background-color: var(--footer-color);
 }
-
 
 .logo-footer {
   display: block;
@@ -571,32 +588,34 @@ gap: 30px;
   text-decoration: none;
 }
 
-.list-footer-icon{
+.list-footer-icon {
   display: flex;
   gap: 10px;
 }
 
 .li-footer-icon {
-width: 44px;
-height: 44px;
+  width: 44px;
+  height: 44px;
 }
 
 .link-footer-icon {
   display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
   height: 100%;
 
+  background-color:  rgba(255, 255, 255, 0.1);
   color: var(--title-color);
-}
-.icon-footer{
-  width: 100%;
-  height: 100%;
-  fill: rgba(255, 255, 255, 0.1);
+  border-radius: 24px;
 }
 
-.icon-footer:hover,
-.icon-footer:focus {
-  fill: var(--accent-color);
+.link-footer-icon:hover,
+.link-footer-icon:focus {
+  fill: var(--title-color);
+  background-color: var(--accent-color);
 }
 
 .title-icon {
@@ -605,3 +624,4 @@ height: 44px;
 
   color: var(--title-color);
 }
+
